--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^12.18.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-grid-layout": "^1.5.1"
+    "react-grid-layout": "^1.5.1",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
